--- a/todo.txt
+++ b/todo.txt
@@ -1,2 +1,11 @@
 Сброс страницы + 
-Удаление товаров в админке
+Удаление товаров в админке +
+
+Корзина
+Админ-панель: редактирование товаров
+Поисковик по товарам
+Добавить норм товары
+Выложить на хостинг
+Если пусто, то текст пусто
+Выделение по брендам
+Добавление обычного юзера без админа
